// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link with target blank  1`] = `
Object {
  "component": <div>
    <a
      className={null}
      href="https://themarker.com"
      onClick={[Function]}
      target="_blank"
    >
      The Marker
    </a>
  </div>,
  "styles": "",
}
`;

exports[`Link within paragraph component  1`] = `
Object {
  "component": <div>
    <div
      className=""
    >
      <a
        className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g"
        href="http://www.iflscience.com/physics/new-type-of-bizarre-quantum-material-discovered/"
        onClick={[Function]}
        target="_blank"
      >
        <span>
          New Type Of 
          <strong
            className="htz-h"
          >
            Bizarre Quantum Material
          </strong>
           Discovered.
        </span>
      </a>
    </div>
  </div>,
  "styles": ".htz-a{color:#0B7EB5}.htz-b:hover{border-bottom-width:1px}.htz-c:hover{border-bottom-style:solid}.htz-d:hover{border-bottom-color:#0B7EB5}.htz-e:focus{border-bottom-width:2px}.htz-f:focus{border-bottom-style:solid}.htz-g:focus{border-bottom-color:#0B7EB5}.htz-h{font-weight:700}",
}
`;

exports[`Simple link  1`] = `
Object {
  "component": <div>
    <a
      className={null}
      href="https://www.haaretz.co.il"
      onClick={[Function]}
      target={null}
    >
      Haaretz
    </a>
  </div>,
  "styles": "",
}
`;
